fix: master type instruction color visibility

--- a/Games/Master_Typing/style.css
+++ b/Games/Master_Typing/style.css
@@ -81,7 +81,7 @@ body {
 
 .menu {
   /* background-color: white; */
-  color: #ffffff;
+  color: #4c4c4c;
   padding: 10px;
   cursor: pointer;
   /* border: 2px solid #202639;
